Refactor graph registration